tests/reject/vtMutateVtReturnGeneric.emojic
🐇 🎁 🐚T⚪️🍆 🍇
  🖍🆕 something T

  🆕 ✂️ 🍼 something T 🍇🍉

  ❗️ 🎉 ➡️  T 🍇
    ↩️ something
  🍉
🍉

🕊 🌼 🍇
  🖍🆕 text 🔡

  🆕 🍼 text 🔡 🍇🍉

  🖍❗️ 😣 🍇
    🔤Rabzmw🔤 ➡️ 🖍text
  🍉
🍉

🏁 🍇
  🆕🎁🐚🌼🍆✂️ 🆕🌼🆕 🔤Gumutzr🔤❗️❗️ ➡️ box

  😣🎉box❗️❗️
🍉
